@@ -6,9 +6,15 @@ try:
 except ImportError:
     youtube = None
 
+import time
 
-@task.as_admin(autoretry_for=(POSKeyError,), retry_backoff=5)
+
+# XXX go back to using autoretry when retry is fixed in collective.celery
+# @task.as_admin(autoretry_for=(POSKeyError,), retry_backoff=5)
+@task.as_admin()
 def convertVideoFormats(context):
+    # XXX remove sleep when retry is fixed in collective.celery
+    time.sleep(10)
     convert.convertVideoFormats(context)
 
 
