@@ -10,6 +10,10 @@ unreleased
 
 - Retry on POSKeyError when using celery
 
+- #2610885: Sleep for a few seconds in convert task because retry isn't working
+  with collective.celery tasks.
+  [JL 2019-02-28]
+
 2.0.4 (2017-12-18)
 ------------------
 
